post launch bugs

--- a/_includes/forms/jotform/newsletter.html
+++ b/_includes/forms/jotform/newsletter.html
@@ -16,7 +16,7 @@
           </div>
         </div>
         <div class="custom-control custom-checkbox">
-          <input type="checkbox" name="q2_typeA[]" class="custom-control-input" id="signup-terms" required>
+          <input type="checkbox" name="q2_typeA[]" class="custom-control-input" value="Yes" id="signup-terms" required>
           <label class="custom-control-label" for="signup-terms">{% t 'privacy_text' %}</label>
         </div>
     </form>
@@ -39,7 +39,7 @@
           </div>
         </div>
         <div class="custom-control custom-checkbox">
-          <input type="checkbox" name="q2_typeA[]" class="custom-control-input" id="signup-terms" required>
+          <input type="checkbox" name="q2_typeA[]" class="custom-control-input" value="Yes" id="signup-terms" required>
           <label class="custom-control-label" for="signup-terms">{% t 'privacy_text' %}</label>
         </div>
     </form>
