--- a/_includes/forms/jotform/contact.html
+++ b/_includes/forms/jotform/contact.html
@@ -4,38 +4,38 @@
     <input type="hidden" name="q9_language" value="{{ site.active_lang }}">
     <div class="form-group two">
       <div class="input-block">
-        <input type="text" class="form-control" placeholder="{% t 'first_name' %} *" aria-label="First Name" title="First Name" id="validationUsername" name="q3_firstName" required>
+        <input type="text" class="form-control" placeholder="{% t 'first_name' %} *" aria-label="{% t 'validation_firstname' %}" title="{% t 'validation_firstname' %}" id="validationUsername" name="q3_firstName" required>
         <div class="invalid-feedback">
           {% t 'validation_firstname' %}
         </div>
       </div>
       <div class="input-block">
-        <input type="text" class="form-control" placeholder="{% t 'surname' %} *" aria-label="Please enter your Surname" title="Please enter your Surname" id="validationSurnname" name="q6_enterYour" required>
+        <input type="text" class="form-control" placeholder="{% t 'surname' %} *" aria-label="% t 'validation_surname' %}" title="{% t 'validation_surname' %}" id="validationSurnname" name="q6_enterYour" required>
         <div class="invalid-feedback">
           {% t 'validation_surname' %}
         </div>
       </div>
       <div class="input-block">
-        <input type="email" class="form-control" placeholder="{% t 'email' %} *" aria-label="Please enter your Email" title="Please enter your Email" id="validationEmail" name="q4_email" required>
+        <input type="email" class="form-control" placeholder="{% t 'email' %} *" aria-label="{% t 'validation_email' %}" title="{% t 'validation_email' %}" id="validationEmail" name="q4_email" required>
         <div class="invalid-feedback">
           {% t 'validation_email' %}
         </div>
       </div>
       <div class="input-block">
-        <input type="text" class="form-control" placeholder="{% t 'subject' %} *" aria-label="Subject" title="Subject" id="validationSubject" name="q7_subject" required>
+        <input type="text" class="form-control" placeholder="{% t 'subject' %} *" aria-label="{% t 'validation_subject' %}" title="{% t 'validation_subject' %}" id="validationSubject" name="q7_subject" required>
         <div class="invalid-feedback">
           {% t 'validation_subject' %}
         </div>
       </div>
     </div>
     <div class="form-group">
-      <textarea placeholder="{% t 'your_message' %} *" id="validationMessage" name="q5_message" aria-label="Enter your message" required></textarea>
+      <textarea placeholder="{% t 'your_message' %} *" id="validationMessage" name="q5_message" aria-label="Enter your message" title="{% t 'validation_message' %}" required></textarea>
       <div class="invalid-feedback">
         {% t 'validation_message' %}
       </div>
     </div>
     <div class="form-check custom-checkbox">
-      <input class="custom-control-input" type="checkbox" value="Accept" id="tnc" name="q8_terms[]" required>
+      <input class="custom-control-input" type="checkbox" title="{% t 'validation_agree' %}" value="Accept" id="tnc" name="q8_terms[]" required>
       <label class="custom-control-label" for="tnc">
        {% t 'privacy_text' %}
       </label>
