jotform captach disabled

--- a/_sass/pages/_contact.scss
+++ b/_sass/pages/_contact.scss
@@ -68,7 +68,7 @@
     label {
       &:before {
         top: 7px;
-        background-color: transparent !important;
+        background-color: transparent;
         border: solid 1px $black;
         border-radius: 0;
       }
