powered by traveltripper added in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -51,4 +51,7 @@
     {% endif %}
   </div>
   <span class="copyrights">&copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}. All Rights Reserved</span>
+  <div class="credit-info">
+    <a href="https://www.traveltripper.com/" target="_blank"><img src="/assets/images/traveltripper-logo.png" alt="Powered by Travael Tipper"></a>
+  </div>
 </div>
