hp about section grid

--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -132,3 +132,11 @@ body:hover .visually-hidden button {
     height: 100%;
   }
 }
+
+
+.objectfit {
+	object-fit: cover;
+  font-family: 'object-fit: cover;';
+  height: 100%;
+  width: 100%;
+}
