--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -157,3 +157,63 @@
     }
   }
 }
+
+@include media-breakpoint-up(md) {
+  .content-grid-home {
+    display: grid;
+    grid-template-columns: 50%;
+    // grid-template-rows: 50%;
+
+    .content-grid-home__content {
+      grid-column: 1 / 2;
+      grid-row: 1;
+      display: flex;
+      align-items: center;
+
+      .content-wrap {
+        padding: 30px;
+      }
+
+      h4 {
+        margin-bottom: 12px;
+        color: #000;
+      }
+
+      h2 {
+        margin-bottom: 25px;
+      }
+    }
+
+    .content-grid-home__image--large {
+      grid-column: 2 / 3;
+      grid-row: 1/3;
+
+      > div {
+        height: 100%;
+        > div {
+          height: 100%;
+        }
+      }
+    }
+
+    .content-grid-home__image--small {
+      grid-column: 1;
+      grid-row: 2;
+
+      > div {
+        height: 100%;
+        > div {
+          height: 100%;
+        }
+      }
+    }
+  }
+}
+
+.content-grid-home__content {
+  .content-wrap {
+    max-width: 555px;
+    margin: 0 auto;
+    padding: 50px 20px 20px;
+  }
+}
