--- a/_sass/pages/_location.scss
+++ b/_sass/pages/_location.scss
@@ -1,5 +1,65 @@
 // Location Page Elements
 // ==========================================================================
+.content-grid-location {
+  h4 {
+    margin-bottom: 12px;
+    color: #000;
+  }
+
+  h2 {
+    margin-bottom: 25px;
+  }
+}
+
+@include media-breakpoint-up(md) {
+  .content-grid-location {
+    display: grid;
+    grid-template-columns: 25%;
+    // grid-template-rows: 50%;
+
+    .content-grid-location__content {
+      grid-column: 1 / 3;
+      grid-row: 1;
+      display: flex;
+      align-items: center;
+
+      .content-wrap {
+        padding: 30px;
+      }
+    }
+
+    .content-grid-location__image {
+      > div {
+        height: 100%;
+
+        > div {
+          height: 100%;
+        }
+      }
+    }
+
+    .content-grid-location__image--1 {
+      grid-column: 3 / 5;
+      grid-row: 1;
+    }
+
+    .content-grid-location__image--2 {
+      grid-column: 1 / 3;
+      grid-row: 2;
+    }
+
+    .content-grid-location__image--3 {
+      grid-column: 3 / 4;
+      grid-row: 2;
+    }
+
+    .content-grid-location__image--4 {
+      grid-column: 4 / 5;
+      grid-row: 2;
+    }
+  }
+}
+
 
 // Image collage
 .image-collage {
