--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -172,8 +172,9 @@
 @include media-breakpoint-up(md) {
   .content-grid-home {
     display: grid;
-    grid-template-columns: 50%;
-    // grid-template-rows: 50%;
+    grid-template-columns: 50% 1fr;
+    grid-template-rows: 1fr 1fr;
+    max-height: 925px;
 
     .content-grid-home__content {
       grid-column: 1 / 2;
