--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -172,9 +172,14 @@
 @include media-breakpoint-up(md) {
   .content-grid-home {
     display: grid;
-    grid-template-columns: 50% 1fr;
-    grid-template-rows: 1fr 1fr;
+    // grid-template-columns: 50% 1fr;
+    grid-template-columns: repeat(2, minmax(200px, 1fr));
+    grid-template-rows: repeat(2, minmax(50%, 450px));
     max-height: 925px;
+
+    img {
+      width: 100%;
+    }
 
     .content-grid-home__content {
       grid-column: 1 / 2;
