--- a/_sass/pages/_location.scss
+++ b/_sass/pages/_location.scss
@@ -14,8 +14,15 @@
 @include media-breakpoint-up(md) {
   .content-grid-location {
     display: grid;
-    grid-template-columns: 25%;
-    // grid-template-rows: 50%;
+    grid-template-columns: repeat(4, minmax(100px, 1fr));
+    grid-template-rows: repeat(2, minmax(50%, 450px));
+
+    img {
+      object-fit: cover;
+      font-family: 'object-fit: cover;';
+      height: 100%;
+      width: 100%;
+    }
 
     .content-grid-location__content {
       grid-column: 1 / 3;
@@ -57,6 +64,14 @@
       grid-column: 4 / 5;
       grid-row: 2;
     }
+  }
+}
+
+.content-grid-location__content {
+  .content-wrap {
+    max-width: 555px;
+    margin: 0 auto;
+    padding: 50px 20px 20px;
   }
 }
 
