--- a/_includes/blog-banner.html
+++ b/_includes/blog-banner.html
@@ -1,4 +1,4 @@
-<section class="inner-banner blog-banner text-center banner--editable" style="background-image: url({{ site.data._regions.en._pages.blog.blog_banner[0].content.url_large }}">
+<section class="inner-banner blog-banner text-center banner--editable" style="background-image: url({{ site.data._regions.en.blog.index.blog_banner[0].content.url_large }}">
   {% regionblock blog_banner, type:image %}
     <img src="/assets/images/blog/blog-banner.jpg">
   {% endregionblock %}
