--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -112,9 +112,9 @@
       max-width: 555px;
       margin: 0 auto;
       padding: 50px 20px 20px;
-      @include media-breakpoint-up(md) {
-        padding: 100px 15px 76px;
-      }
+      // @include media-breakpoint-up(md) {
+      //   padding: 100px 15px 76px;
+      // }
       h4 {
         margin-bottom: 12px;
         color: $black;
