site wide fonts updated

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -4,10 +4,14 @@
 // Typography
 $font-size-base: 1rem !default;
 
-// Fonts
-$global-font-family: 'Yu Mincho Pr6N W03 L' !default;
-$header-font-family: 'GaramondPrmrW01-LtDspl' !default;
-$caption-font-family: $header-font-family !default;
+// // Fonts
+// $global-font-family: 'garamond-premier-pro-display' !default;
+// $header-font-family: 'garamond-premier-pro-display' !default;
+// $caption-font-family: $header-font-family !default;
+// $global-font-family: 'Yu Mincho Pr6N W03 L' !default;
+// $header-font-family: 'GaramondPrmrW01-LtDspl' !default;
+// $caption-font-family: $header-font-family !default;
+
 
 // Type scale
 $type-size-0: 5rem !default; // ~80px
