--- a/_sass/pages/_shared.scss
+++ b/_sass/pages/_shared.scss
@@ -100,7 +100,7 @@
     }
 
     h3 {
-      display: inline-block;
+      // display: inline-block;
       padding: 30px;
       font-family: $global-font-family;
       font-size: $type-size-4;
