--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,11 +13,12 @@
   document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/g, '') + ' js ';
 </script>
 
+
 <!-- Garamond Prmr Font -->
-<link type="text/css" rel="stylesheet" href="//fast.fonts.net/cssapi/ab8ee9bc-94ae-4607-b264-a1a9f675682c.css"/>
+<!-- <link type="text/css" rel="stylesheet" href="//fast.fonts.net/cssapi/ab8ee9bc-94ae-4607-b264-a1a9f675682c.css"/> -->
 
 <!-- Yu Mincho Pr6N Font -->
-<link rel="stylesheet" type="text/css" href="https://fast.fonts.net/cssapi/ab8ee9bc-94ae-4607-b264-a1a9f675682c.css"/>
+<!-- <link rel="stylesheet" type="text/css" href="https://fast.fonts.net/cssapi/ab8ee9bc-94ae-4607-b264-a1a9f675682c.css"/> -->
 
 <!-- Leaflet Maps -->
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.3/dist/leaflet.css">
@@ -25,8 +26,11 @@
 <!-- Bootstrap Select CSS -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/css/bootstrap-select.min.css">
 
+{% if site.active_lang == "ja" %}
+<link rel="stylesheet" href="{{ '/ja/assets/css/main.css' | absolute_url }}">
+{% else %}
 <link rel="stylesheet" href="{{ '/assets/css/main.css' | absolute_url }}">
-
+{% endif %}
 <!--[if IE 9]>
   <link href="https://cdn.jsdelivr.net/gh/coliff/bootstrap-ie8/css/bootstrap-ie9.min.css" rel="stylesheet">
 <![endif]-->
@@ -34,3 +38,15 @@
   <link href="https://cdn.jsdelivr.net/gh/coliff/bootstrap-ie8/css/bootstrap-ie8.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/g/html5shiv@3.7.3"></script>
 <![endif]-->
+
+<!-- Fonts -->
+<script>
+(function(d) {
+var config = {
+kitId: 'tap7pue',
+scriptTimeout: 3000,
+async: true
+},
+h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
+})(document);
+</script>
