--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,6 +1,7 @@
 ---
 ---
 
+@import "basefont{{site.active_lang}}";
 @import "bootstrap/bootstrap";
 @import "lightgallery/lightgallery";
 @import "variables";
