--- a/_sass/pages/_offers.scss
+++ b/_sass/pages/_offers.scss
@@ -1,2 +1,131 @@
 // Offers & Offer Details Page Elements
 // ==========================================================================
+
+.offers {
+  @include fixed-width-layout;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  @include media-breakpoint-up(md) {
+    margin-top: 70px;
+    margin-bottom: 70px;
+  }
+  &__row {
+    @include make-row;
+    align-items: center;
+    margin-bottom: 30px;
+    background-color: $lighter-gray;
+    @include media-breakpoint-up(md) {
+      margin-bottom: 50px;
+    }
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+  &__image {
+    @include make-col-ready;
+    @include media-breakpoint-up(md) {
+      @include make-col(4.75);
+      padding-right: 0;
+      padding-left: 0;
+    }
+    &__inner {
+      position: relative;
+      img {
+        width: 100%;
+        height: 220px;
+        object-fit: cover;
+        @include media-breakpoint-up(md) {
+          max-width: 416px;
+          min-height: 320px;
+        }
+      }
+      .primary-btn {
+        @include absolute-position(0,auto,auto,0,auto,auto);
+      }
+    }
+  }
+  &__content {
+    @include make-col-ready;
+    background-color: $lighter-gray;
+    @include media-breakpoint-up(md) {
+      @include make-col(7.25);
+    }
+    &__inner {
+      max-width: 520px;
+      padding: 30px 0;
+    }
+    h2 {
+      margin-bottom: 10px;
+      @include media-breakpoint-up(md) {
+        margin-bottom: 25px;
+      }
+    }
+    p {
+      @include media-breakpoint-up(md) {
+        margin-bottom: 30px;
+      }
+    }
+  }
+}
+
+.offer-details {
+  @include fluid-layout;
+  &__row {
+    @include make-row;
+    align-items: center;
+  }
+  &__content {
+    @include make-col-ready;
+    @include media-breakpoint-up(md) {
+      @include make-col(6);
+      order: 1;
+    }
+    &__inner {
+      padding: 100px 85px 100px 100px;
+      h2 {
+        margin-bottom: 25px;
+      }
+    }
+    .btn-holder {
+      padding-top: 15px;
+      padding-bottom: 40px;
+    }
+    .terms {
+      position: relative;
+      margin-bottom: 30px;
+      padding-bottom: 10px;
+      font-size: $type-size-6;
+      text-transform: uppercase;
+      letter-spacing: .5;
+      &:after {
+        @include absolute-position(auto,auto,0,0,80px,1px);
+        background-color: $black;
+      }
+    }
+    &__list {
+      margin: 0;
+      padding: 0;
+      li {
+        position: relative;
+        padding: 0 0 10px 30px;
+        &:after {
+          @include absolute-position(10px,auto,0,0,3px,3px);
+          background-color: $black;
+          border-radius: 50%;
+        }
+      }
+    }
+  }
+  &__image {
+    @include make-col-ready;
+    padding: 0;
+    @include media-breakpoint-up(md) {
+      @include make-col(6);
+      order: 2;
+    }
+    img {
+      width: 100%;
+      object-fit: cover;
+    }
+  }
+}
