--- a/_sass/pages/_shared.scss
+++ b/_sass/pages/_shared.scss
@@ -35,6 +35,37 @@
   }
 }
 
+.page-banner {
+  position: relative;
+  margin-bottom: 24px;
+  @include media-breakpoint-up(sm) {
+    height: 344px;
+  }
+  img {
+    width: 100%;
+    height: 150px;
+    @include media-breakpoint-up(sm) {
+      height: 344px;
+      object-fit: cover;
+    }
+  }
+  .inner-banner-content {
+    @include absolute-position(50%,0,auto,0,auto,auto);
+    padding: 0 15px;
+    text-align: center;
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+    h1 {
+      text-transform: lowercase;
+    }
+  }
+  &.blog-banner {
+    h3 {
+      @extend h1;
+    }
+  }
+}
+
 //Full screen banner
 .banner-fullscreen {
   @include fluid-layout;
