--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -26,4 +26,6 @@
 @import "pages/careers";
 @import "pages/faq";
 @import "pages/static";
+@import "pages/amenities";
+@import "pages/cafelounge";
 @import "shame";
