--- a/_sass/pages/_offers.scss
+++ b/_sass/pages/_offers.scss
@@ -9,6 +9,7 @@
     margin-top: 70px;
     margin-bottom: 70px;
   }
+
   &__row {
     @include make-row;
     align-items: center;
@@ -17,10 +18,12 @@
     @include media-breakpoint-up(md) {
       margin-bottom: 50px;
     }
+
     &:last-child {
       margin-bottom: 0;
     }
   }
+
   &__image {
     @include make-col-ready;
     @include media-breakpoint-up(md) {
@@ -28,8 +31,10 @@
       padding-right: 0;
       padding-left: 0;
     }
+
     &__inner {
       position: relative;
+
       img {
         width: 100%;
         height: 220px;
@@ -39,27 +44,32 @@
           min-height: 320px;
         }
       }
+
       .primary-btn {
         @include absolute-position(0,auto,auto,0,auto,auto);
       }
     }
   }
+
   &__content {
     @include make-col-ready;
     background-color: $lighter-gray;
     @include media-breakpoint-up(md) {
       @include make-col(7.25);
     }
+
     &__inner {
       max-width: 520px;
       padding: 30px 0;
     }
+
     h2 {
       margin-bottom: 10px;
       @include media-breakpoint-up(md) {
         margin-bottom: 25px;
       }
     }
+
     p {
       @include media-breakpoint-up(md) {
         margin-bottom: 30px;
@@ -70,26 +80,37 @@
 
 .offer-details {
   @include fluid-layout;
+
   &__row {
     @include make-row;
-    align-items: center;
+    @include media-breakpoint-up(md) {
+      align-items: center;
+    }
   }
+
   &__content {
     @include make-col-ready;
     @include media-breakpoint-up(md) {
       @include make-col(6);
       order: 1;
     }
+
     &__inner {
-      padding: 100px 85px 100px 100px;
+      padding: 50px 15px;
+      @include media-breakpoint-up(lg) {
+        padding: 100px 85px 100px 100px;
+      }
+
       h2 {
         margin-bottom: 25px;
       }
     }
+
     .btn-holder {
       padding-top: 15px;
       padding-bottom: 40px;
     }
+
     .terms {
       position: relative;
       margin-bottom: 30px;
@@ -102,20 +123,29 @@
         background-color: $black;
       }
     }
+
     &__list {
       margin: 0;
       padding: 0;
+
       li {
         position: relative;
         padding: 0 0 10px 30px;
+
         &:after {
           @include absolute-position(10px,auto,0,0,3px,3px);
           background-color: $black;
           border-radius: 50%;
         }
+
+        &:last-child {
+          margin-bottom: 0;
+          padding-bottom: 0;
+        }
       }
     }
   }
+
   &__image {
     @include make-col-ready;
     padding: 0;
@@ -123,9 +153,107 @@
       @include make-col(6);
       order: 2;
     }
+
     img {
       width: 100%;
       object-fit: cover;
+    }
+  }
+}
+
+.more-offers {
+  @include fixed-width-layout;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  text-align: center;
+  @include media-breakpoint-up(md) {
+    margin-top: 100px;
+    margin-bottom: 40px;
+  }
+
+  h4 {
+    margin-bottom: 15px;
+  }
+
+  h2 {
+    margin-bottom: 35px;
+    text-transform: uppercase;
+  }
+
+  &__row {
+    @include make-row;
+    justify-content: space-around;
+  }
+
+  &__item {
+    @include make-col-ready;
+    margin-bottom: 30px;
+    text-align: left;
+    @include media-breakpoint-up(md) {
+      @include make-col(6);
+    }
+    @include media-breakpoint-up(lg) {
+      @include make-col(4);
+      margin-bottom: 0;
+    }
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+
+    &__inner {
+      background-color: $lighter-gray;
+      transition: $global-transition;
+
+      &:hover {
+        background-color: $white;
+
+        h3 {
+          a {
+            color: $primary-color;
+          }
+        }
+      }
+    }
+  }
+  &__image {
+    margin: 0;
+
+    img {
+      width: 100%;
+      height: 180px;
+      object-fit: cover;
+      @include media-breakpoint-up(md) {
+        height: 224px;
+      }
+    }
+  }
+
+  &__content {
+    padding: 30px 15px;
+    @include media-breakpoint-up(md) {
+      padding: 30px 24px;
+    }
+
+    .link-btn {
+      margin-bottom: 10px;
+    }
+
+    h3 {
+      font-style: italic;
+
+      a {
+        display: block;
+        color: $black;
+        transition: $global-transition;
+      }
+    }
+  }
+  
+  .btn-holder {
+    padding-top: 40px;
+    @include media-breakpoint-up(md) {
+      padding-top: 60px;
     }
   }
 }
