--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -171,22 +171,33 @@
 
 @include media-breakpoint-up(md) {
   .content-grid-home {
+    display: -ms-grid;
     display: grid;
-    grid-template-columns: repeat(2, minmax(200px, 1fr));
-    grid-template-rows: repeat(2, minmax(50%, 450px));
+    -ms-grid-columns: 50% 50%;
+        grid-template-columns: repeat(2, minmax(200px, 1fr));
+    -ms-grid-rows: 50% 50%;
+        grid-template-rows: repeat(2, minmax(50%, 450px));
 
     img {
-      object-fit: cover;
+      -o-object-fit: cover;
+         object-fit: cover;
       font-family: 'object-fit: cover;';
       height: 100%;
       width: 100%;
     }
 
     .content-grid-home__content {
+      -ms-grid-column: 1;
+      -ms-grid-column-span: 1;
       grid-column: 1 / 2;
+      -ms-grid-row: 1;
       grid-row: 1;
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
-      align-items: center;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
 
       .content-wrap {
         padding: 30px;
@@ -194,7 +205,11 @@
     }
 
     .content-grid-home__image--large {
+      -ms-grid-column: 2;
+      -ms-grid-column-span: 1;
       grid-column: 2 / 3;
+      -ms-grid-row: 1;
+      -ms-grid-row-span: 2;
       grid-row: 1/3;
 
       > div {
@@ -206,7 +221,9 @@
     }
 
     .content-grid-home__image--small {
+      -ms-grid-column: 1;
       grid-column: 1;
+      -ms-grid-row: 2;
       grid-row: 2;
 
       > div {
@@ -220,12 +237,17 @@
 
     &.large-image-left {
       .content-grid-home__content {
+        -ms-grid-column: 2;
+        -ms-grid-column-span: 1;
         grid-column: 2 / 3;
       }
       .content-grid-home__image--large {
+        -ms-grid-column: 1;
+        -ms-grid-column-span: 1;
         grid-column: 1 / 2;
       }
       .content-grid-home__image--small {
+        -ms-grid-column: 2;
         grid-column: 2;
       }
     }
