--- a/_sass/pages/_location.scss
+++ b/_sass/pages/_location.scss
@@ -13,22 +13,33 @@
 
 @include media-breakpoint-up(md) {
   .content-grid-location {
+    display: -ms-grid;
     display: grid;
-    grid-template-columns: repeat(4, minmax(100px, 1fr));
-    grid-template-rows: repeat(2, minmax(50%, 450px));
+    -ms-grid-columns: 25% 25% 25% 25%;
+        grid-template-columns: repeat(4, minmax(100px, 1fr));
+    -ms-grid-rows: 50% 50%;
+        grid-template-rows: repeat(2, minmax(50%, 450px));
 
     img {
-      object-fit: cover;
+      -o-object-fit: cover;
+         object-fit: cover;
       font-family: 'object-fit: cover;';
       height: 100%;
       width: 100%;
     }
 
     .content-grid-location__content {
+      -ms-grid-column: 1;
+      -ms-grid-column-span: 2;
       grid-column: 1 / 3;
+      -ms-grid-row: 1;
       grid-row: 1;
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
-      align-items: center;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
 
       .content-wrap {
         padding: 30px;
@@ -46,22 +57,34 @@
     }
 
     .content-grid-location__image--1 {
+      -ms-grid-column: 3;
+      -ms-grid-column-span: 2;
       grid-column: 3 / 5;
+      -ms-grid-row: 1;
       grid-row: 1;
     }
 
     .content-grid-location__image--2 {
+      -ms-grid-column: 1;
+      -ms-grid-column-span: 2;
       grid-column: 1 / 3;
+      -ms-grid-row: 2;
       grid-row: 2;
     }
 
     .content-grid-location__image--3 {
+      -ms-grid-column: 3;
+      -ms-grid-column-span: 1;
       grid-column: 3 / 4;
+      -ms-grid-row: 2;
       grid-row: 2;
     }
 
     .content-grid-location__image--4 {
+      -ms-grid-column: 4;
+      -ms-grid-column-span: 1;
       grid-column: 4 / 5;
+      -ms-grid-row: 2;
       grid-row: 2;
     }
   }
