--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -105,6 +105,8 @@
     @include make-col-ready;
     padding-right: 0;
     padding-left: 0;
+    display: flex;
+    align-items: center;
     @include media-breakpoint-up(md) {
       @include make-col(6);
     }
