--- a/_sass/pages/_cafelounge.scss
+++ b/_sass/pages/_cafelounge.scss
@@ -40,6 +40,9 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
+      @include media-breakpoint-up(md) {
+        min-height: 520px;
+      }
     }
   }
 
