offers definition added

--- a/_sass/pages/_contact.scss
+++ b/_sass/pages/_contact.scss
@@ -23,7 +23,7 @@
   }
   .form-control {
     &:valid {
-      border-color: $black !important;
+      // border-color: $black !important;
     }
   }
   input, textarea {
