--- a/_sass/pages/_offers.scss
+++ b/_sass/pages/_offers.scss
@@ -68,6 +68,9 @@
       @include media-breakpoint-up(md) {
         margin-bottom: 25px;
       }
+      a {
+        color: $primary-color;
+      }
     }
 
     p {
@@ -83,15 +86,14 @@
 
   &__row {
     @include make-row;
-    @include media-breakpoint-up(md) {
-      align-items: center;
-    }
   }
 
   &__content {
     @include make-col-ready;
     @include media-breakpoint-up(md) {
       @include make-col(6);
+      display: flex;
+      align-items: center;
       order: 1;
     }
 
@@ -157,6 +159,7 @@
 
     img {
       width: 100%;
+      height: 100%;
       object-fit: cover;
       @include media-breakpoint-up(md) {
         min-height: 520px;
