--- a/_sass/pages/_offers.scss
+++ b/_sass/pages/_offers.scss
@@ -81,7 +81,7 @@
   }
 }
 
-.offer-details {
+.two-col {
   @include fluid-layout;
 
   &__row {
@@ -142,8 +142,10 @@
         }
 
         &:last-child {
-          margin-bottom: 0;
-          padding-bottom: 0;
+          @include media-breakpoint-up(md) {
+            margin-bottom: 0;
+            padding-bottom: 0;
+          }
         }
       }
     }
@@ -163,6 +165,29 @@
       object-fit: cover;
       @include media-breakpoint-up(md) {
         min-height: 520px;
+      }
+    }
+  }
+
+  &--location {
+    padding: 50px 0;
+    h4 {
+      margin-bottom: 10px;
+    }
+    .two-col__image {
+      img {
+        max-width: 520px;
+        height: auto;
+        min-height: auto;
+      }
+    }
+    .two-col__content__list {
+      @include media-breakpoint-up(md) {
+        float: left;
+        width: 48%;
+      }
+      li {
+        padding-bottom: 0;
       }
     }
   }
