--- a/_includes/stay-zen.html
+++ b/_includes/stay-zen.html
@@ -6,6 +6,6 @@
       <h2 tabindex="0">{% t 'stay_zen' %}</h2>
       <h4 tabindex="0">hotel zen tokyo</h4>
     </div>
-    <a class="primary-btn" href="#"><span>{% t 'book_your_stay' %}</span><i class="fas fa-angle-right"></i></a>
+    <a class="primary-btn" href="{% t 'booking_engine_url' %}" target="_blank"><span>{% t 'book_your_stay' %}</span><i class="fas fa-angle-right"></i></a>
   </div>
 </section>
