--- a/_sass/pages/_cafelounge.scss
+++ b/_sass/pages/_cafelounge.scss
@@ -167,11 +167,14 @@
       padding: 0;
 
       li {
-        margin-bottom: 10px;
+        margin: 0;
+        padding-bottom: 10px;
 
         a {
+          display: inline-block;
           padding-bottom: 10px;
           color: $black;
+          border-bottom: solid 1px transparent;
           span {
             display: inline-block;
             padding-right: 12px;
