--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,7 @@
   <div class="links">
     <h4 tabindex="0">{% t 'about_links' %}</h4>
     {% assign footer-links = site.data.navigation.footer_left %}
-    <ul class="d-flex flex-column pb-sm-down">
+    <ul class="pb-sm-down about-links">
       {% for link in footer-links %}
         <li>
           <a href="{{ link.url | absolute_url }}">{{ link.title }}</a>
