--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -1,6 +1,5 @@
 // Navigation Elements
 // ========================================================================== */
-
 // Removes margins, padding, and bullet points from navigation lists
 nav {
   @include fixed-width-layout;
@@ -18,9 +17,7 @@ nav {
   a {
     text-decoration: none;
   }
-
   // Override white-space for nested lists
-
   ol li,
   ul li {
     margin-bottom: 0;
@@ -35,15 +32,16 @@ nav {
 .navbar-brand {
   width: 140px;
   order: 1;
-
   @include media-breakpoint-up(sm) {
-    width: 235px;
+    width: 210px;
+  }
+  @media screen and (min-width: 992px) and (max-width: 1100px) {
+    width: 156px;
   }
 }
 
 .navbar-collapse {
   order: 5;
-
   @include media-breakpoint-up(lg) {
     order: 2;
   }
@@ -58,7 +56,6 @@ nav {
 
     .nav-item {
       text-align: center;
-
       @include media-breakpoint-up(lg) {
         text-align: left;
       }
@@ -74,16 +71,20 @@ nav {
         border-top: solid 1px transparent;
         border-bottom: solid 1px transparent;
         @include transition ($global-transition);
-
         @include media-breakpoint-up(lg) {
           padding: 3px 3px 4px;
+          font-size: $type-size-6;
+          text-transform: none;
         }
         @include media-breakpoint-up(xl) {
-          margin: 0 13px;
+          margin: 0 10px;
+          font-size: $type-size-7;
+          text-transform: uppercase;
         }
       }
 
-      &.active, &:hover {
+      &.active,
+      &:hover {
         .nav-link {
           border-top: solid 1px $black;
           border-bottom: solid 1px $black;
@@ -99,13 +100,15 @@ nav {
     font-size: $type-size-6;
     text-align: center;
     order: 3;
-
     @include media-breakpoint-up(sm) {
-      max-width: auto;
+      max-width: none;
       margin: 0 0 0 30px;
       padding: 11px 19px;
       font-size: $type-size-5;
       order: 4;
+    }
+    @media screen and (min-width: 992px) and (max-width: 1100px) {
+      margin: 0 0 0 10px;
     }
   }
 
@@ -131,7 +134,8 @@ nav {
       -o-transform: rotate(0deg);
       transform: rotate(0deg);
 
-      &:nth-child(1), &:nth-child(3) {
+      &:nth-child(1),
+      &:nth-child(3) {
         -webkit-transition: transform .35s ease-in-out;
         -moz-transition: transform .35s ease-in-out;
         -o-transition: transform .35s ease-in-out;
@@ -170,11 +174,9 @@ nav {
         }
       }
     }
-
     @include media-breakpoint-up(md) {
       order: 4;
     }
-
     @include media-breakpoint-up(lg) {
       order: 4;
     }
@@ -191,28 +193,29 @@ nav {
   .navbar-brand {
     width: 125px;
     @include transition($global-transition);
-
     @include media-breakpoint-up(sm) {
       width: 196px;
     }
+    @media screen and (min-width: 992px) and (max-width: 1199px) {
+      width: 156px;
+    }
   }
 }
-
-
 //Select menu styling
 .bootstrap-select {
-
   .dropdown-toggle {
     &::after {
       vertical-align: .1em;
     }
   }
+
   .dropdown-menu {
     left: 11px;
     border-radius: 0;
 
     .dropdown-item {
-      &.active, &:active {
+      &.active,
+      &:active {
         background-color: $gray;
       }
     }
@@ -233,7 +236,6 @@ nav {
   text-transform: uppercase;
   background: transparent;
   border: 0;
-
   @include media-breakpoint-up(lg) {
     margin-left: 10px;
   }
@@ -246,10 +248,9 @@ nav {
     height: 16px;
     margin-right: 7px;
     content: '';
-    background: url('/assets/images/globe-dark.png');
+    background: url("/assets/images/globe-dark.png");
     background-repeat: no-repeat;
     background-size: contain;
-
     @include media-breakpoint-up(sm) {
       display: inline-block;
     }
@@ -259,7 +260,6 @@ nav {
 .form-select {
   margin: 20px auto 10px;
   order: inherit;
-
   @include media-breakpoint-up(md) {
     margin-top: 0;
     margin-right: 30px;
