--- a/_sass/pages/_home.scss
+++ b/_sass/pages/_home.scss
@@ -6,12 +6,17 @@
 .banner {
   .carousel-item {
     height: 200px;
-    @include media-breakpoint-up(md) {
-      height: calc(100vh - 63px);
+
+    @media screen and (min-width: 576px) {
+      height: calc(100vh - 69px);
     }
-    @include media-breakpoint-up(lg) {
-      height: calc(100vh - 128px);
+    @media screen and (min-width: 1039px) {
+      height: calc(100vh - 116px);
     }
+    @media screen and (min-width: 1100px) {
+      height: calc(100vh - 122px);
+    }
+
     &:after {
       @include absolute-position(0,0,0,0,auto,auto);
       z-index: 1;
