Location Page list items vertically aligned to top

--- a/_sass/pages/_offers.scss
+++ b/_sass/pages/_offers.scss
@@ -185,6 +185,7 @@
       @include media-breakpoint-up(md) {
         display: inline-block;
         width: 48%;
+        vertical-align: top;
       }
       li {
         padding-bottom: 0;
