--- a/_sass/pages/_location.scss
+++ b/_sass/pages/_location.scss
@@ -31,7 +31,7 @@
     .content-grid-location__content {
       -ms-grid-column: 1;
       -ms-grid-column-span: 2;
-      grid-column: 1 / 3;
+      grid-column: 3 / 5;
       -ms-grid-row: 1;
       grid-row: 1;
       display: -webkit-box;
@@ -40,7 +40,7 @@
       -webkit-box-align: center;
           -ms-flex-align: center;
               align-items: center;
-
+      background-color: $lighter-gray;
       .content-wrap {
         padding: 30px;
       }
@@ -59,7 +59,7 @@
     .content-grid-location__image--1 {
       -ms-grid-column: 3;
       -ms-grid-column-span: 2;
-      grid-column: 3 / 5;
+      grid-column: 1 / 3;
       -ms-grid-row: 1;
       grid-row: 1;
     }
