--- a/_includes/more-offers.html
+++ b/_includes/more-offers.html
@@ -20,6 +20,6 @@
     {% endfor %}
   </div>
   <div class="btn-holder">
-    <a href="" class="primary-btn"><span>View All Offers</span><i class="fas fa-angle-right"></i></a>
+    <a href="" class="primary-btn"><span>{% t 'view_all_offers' %}</span><i class="fas fa-angle-right"></i></a>
   </div>
 </section>
