--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,12 @@
 </head>
 
 <body>
+
+  <!-- Preloader -->
+  <div class="preloader">
+    <div class="status">&nbsp;</div>
+  </div>
+
   {% if site.active_lang == "ja" %}
     <input type="hidden" id="siteLang" value="ja-JP">
   {% endif %}
