--- a/_sass/pages/_cafelounge.scss
+++ b/_sass/pages/_cafelounge.scss
@@ -93,11 +93,13 @@
   }
 
   &__image {
-    width: 100%;
-    height: 360px;
-    object-fit: cover;
-    @include media-breakpoint-up(md) {
-      height: 560px;
+    img {
+      width: 100%;
+      height: 360px;
+      object-fit: cover;
+      @include media-breakpoint-up(md) {
+        height: 560px;
+      }
     }
   }
 
