--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -213,6 +213,15 @@ svg:not(:root) {
   background-color: $white;
 }
 
+@-webkit-keyframes rotation {
+		from {
+				-webkit-transform: rotate(0deg);
+		}
+		to {
+				-webkit-transform: rotate(360deg);
+		}
+}
+
 .status {
   position: absolute;
   top: 50%;
@@ -220,7 +229,9 @@ svg:not(:root) {
   width: 200px;
   height: 200px;
   margin: -100px 0 0 -100px;
-  background-image: url('https://raw.githubusercontent.com/niklausgerber/PreLoadMe/master/img/status.gif');
+  background-image: url('/assets/images/preloader.png');
   background-repeat: no-repeat;
   background-position: center;
+  -webkit-animation: rotation 5s infinite;
+  animation: rotation 5s infinite;
 }
