--- a/_layouts/offer-single.html
+++ b/_layouts/offer-single.html
@@ -55,7 +55,9 @@ layout: default
   </div>
 </section>
 
-{% include stay-zen.html %}
+<div class="d-none d-md-block">
+  {% include stay-zen.html %}
+</div>
 
 {% include more-offers.html %}
 
