--- a/_sass/pages/_offers.scss
+++ b/_sass/pages/_offers.scss
@@ -175,11 +175,17 @@
   }
 
   &--location {
-    padding: 50px 15px;
+    padding: 30px 15px;
+    @include media-breakpoint-up(md) {
+      padding: 50px 15px;
+    }
     h4 {
       margin-bottom: 10px;
     }
     .two-col__image {
+      @include media-breakpoint-down(sm) {
+        order: 1;
+      }
       img {
         max-width: 100%;
         height: auto;
