--- a/_sass/pages/_amenities.scss
+++ b/_sass/pages/_amenities.scss
@@ -49,4 +49,26 @@
       font-size: $type-size-4;
     }
   }
+  &__list {
+    @include make-col-ready;
+    @include make-col(12);
+    ul {
+      max-width: 1000px;
+      margin: 0 auto;
+      padding: 0;
+      li {
+        position: relative;
+        padding-left: 20px;
+        @include media-breakpoint-up(sm) {
+          display: inline-block;
+          width: 48%;
+        }
+        &:after {
+          @include absolute-position(10px,auto,auto,0,3px,3px);
+          background-color: $black;
+          border-radius: 50%;
+        }
+      }
+    }
+  }
 }
