--- a/_sass/pages/_cafelounge.scss
+++ b/_sass/pages/_cafelounge.scss
@@ -8,20 +8,20 @@
     @include make-row;
     align-items: center;
     &--alternate {
-      &:nth-child(odd) {
+      &:nth-child(even) {
         .cafelounge__image {
-          @include media-breakpoint-up(md) {
-            order: 2;
-          }
-        }
-        .cafelounge__content {
           @include media-breakpoint-up(md) {
             order: 1;
           }
         }
+        .cafelounge__content {
+          @include media-breakpoint-up(md) {
+            order: 2;
+          }
+        }
         .cafelounge__content__inner {
           @include media-breakpoint-up(md) {
-            margin-left: auto;
+            margin-right: auto;
           }
         }
       }
@@ -56,7 +56,7 @@
       max-width: 520px;
       margin: 50px 15px;
       @include media-breakpoint-up(md) {
-        margin: 100px;
+        margin: 100px 100px 100px auto;
       }
     }
 
