--- a/_sass/pages/_location.scss
+++ b/_sass/pages/_location.scss
@@ -94,7 +94,10 @@
   .content-wrap {
     max-width: 555px;
     margin: 0 auto;
-    padding: 50px 20px 20px;
+    padding: 0 20px 20px;
+    @include media-breakpoint-up(md) {
+      padding: 50px 20px 20px;
+    }
   }
 }
 
